Add a test fixture to suppress the NuGet Preview Changes dialog
By default, this dialog is shown to users.  There is no Apex automation for this dialog currently, and all existing tests expect it not to show.  If it is not suppressed, the tests will hang.

For users who like to have this dialog enabled (guilty!), once suppressed, there is no UI affordance that I could find to restore it.

This change suppresses the dialog via the registry key, then restores it to it's previous value at the conclusion of the test.

--- a/src/NuGet.Clients/NuGet.PackageManagement.UI/NuGet.PackageManagement.UI.csproj
+++ b/src/NuGet.Clients/NuGet.PackageManagement.UI/NuGet.PackageManagement.UI.csproj
@@ -122,6 +122,7 @@
     <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
     <InternalsVisibleTo Include="NuGet.PackageManagement.UI.Test" />
     <InternalsVisibleTo Include="NuGet.PackageManagement.UI.TestContract" />
+    <InternalsVisibleTo Include="NuGet.Tests.Apex" />
     <InternalsVisibleTo Include="Test.Utility" />
   </ItemGroup>
 
